# kafka-protocol-rs

./: .gitignore  AUTHORS  CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: build-and-test.yml  clippy.yml
franz_derive/: Cargo.toml
franz_derive/src/: lib.rs
franz_protocol/: Cargo.toml
franz_protocol/src/: buf.rs  error.rs  lib.rs  types.rs
protocol_base/: Cargo.toml
protocol_base/src/: buf.rs  types.rs
protocol_codegen/: Cargo.toml
protocol_codegen/src/: generate_messages.rs  main.rs
protocol_codegen/src/generate_messages/: code_writer.rs  expr.rs  generate.rs  parse.rs  spec.rs
src/: client.rs  compression.rs  error.rs  lib.rs  messages.rs  network.rs  records.rs
src/compression/: gzip.rs  lz4.rs  none.rs  snappy.rs  zstd.rs
src/messages/: add_offsets_to_txn_request.rs  add_offsets_to_txn_response.rs  add_partitions_to_txn_request.rs  add_partitions_to_txn_response.rs  add_raft_voter_request.rs  add_raft_voter_response.rs  allocate_producer_ids_request.rs  allocate_producer_ids_response.rs  alter_client_quotas_request.rs  alter_client_quotas_response.rs  alter_configs_request.rs  alter_configs_response.rs  alter_isr_request.rs  alter_isr_response.rs  alter_partition_reassignments_request.rs  alter_partition_reassignments_response.rs  alter_partition_request.rs  alter_partition_response.rs  alter_replica_log_dirs_request.rs  alter_replica_log_dirs_response.rs  alter_share_group_offsets_request.rs  alter_share_group_offsets_response.rs  alter_user_scram_credentials_request.rs  alter_user_scram_credentials_response.rs  api_versions_request.rs  api_versions_response.rs  assign_replicas_to_dirs_request.rs  assign_replicas_to_dirs_response.rs  begin_quorum_epoch_request.rs  begin_quorum_epoch_response.rs  broker_heartbeat_request.rs  broker_heartbeat_response.rs  broker_registration_request.rs  broker_registration_response.rs  consumer_group_describe_request.rs  consumer_group_describe_response.rs  consumer_group_heartbeat_request.rs  consumer_group_heartbeat_response.rs  consumer_protocol_assignment.rs  consumer_protocol_subscription.rs  (+159 more)
src/network/: broker.rs  compression.rs  messages.rs  records.rs  service.rs  service_map.rs
src/network/compression/: gzip.rs  none.rs  snappy.rs
src/network/messages/: add_offsets_to_txn_request.rs  add_offsets_to_txn_response.rs  add_partitions_to_txn_request.rs  add_partitions_to_txn_response.rs  alter_configs_request.rs  alter_configs_response.rs  alter_partition_reassignments_request.rs  alter_partition_reassignments_response.rs  alter_replica_log_dirs_request.rs  alter_replica_log_dirs_response.rs  api_versions.rs  api_versions_request.rs  api_versions_response.rs  controlled_shutdown_request.rs  controlled_shutdown_response.rs  create_acls_request.rs  create_acls_response.rs  create_delegation_token_request.rs  create_delegation_token_response.rs  create_partitions_request.rs  create_partitions_response.rs  create_topics_request.rs  create_topics_response.rs  delete_acls_request.rs  delete_acls_response.rs  delete_groups_request.rs  delete_groups_response.rs  delete_records_request.rs  delete_records_response.rs  delete_topics_request.rs  delete_topics_response.rs  describe_acls_request.rs  describe_acls_response.rs  describe_configs_request.rs  describe_configs_response.rs  describe_delegation_token_request.rs  describe_delegation_token_response.rs  describe_groups_request.rs  describe_groups_response.rs  describe_log_dirs_request.rs  (+61 more)
src/protocol/: buf.rs  mod.rs  types.rs
tests/: api_versions.rs  fetch_response.rs  integration_tests.rs  produce_fetch.rs  request_header.rs  tests.rs
tests/all_tests/: api_key.rs  api_versions.rs  common.rs  fetch_response.rs  integration_tests.rs  mod.rs  produce_fetch.rs  request_header.rs
tests/common/: mod.rs
xtask/: Cargo.toml
xtask/src/: generate_messages.rs  main.rs
xtask/src/generate_messages/: code_writer.rs  generate.rs  spec.rs
