[workspace]
members = ["protocol_codegen"]

[package]
name = "kafka-protocol"
version = "0.11.0"
authors = [
    "Diggory Blake <diggsey@googlemail.com>",
    "Charlotte McElwain <charlotte.c.mcelwain@gmail.com>",
    "belltoy <belltoy@gmail.com>",
]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Implementation of Kafka wire protocol."
homepage = "https://github.com/tychedelia/kafka-protocol-rs"
repository = "https://github.com/tychedelia/kafka-protocol-rs"
documentation = "https://docs.rs/kafka-protocol"
readme = "README.md"
keywords = ["kafka"]


[dependencies]
bytes = "1.0.1"
uuid = "1.3.0"
indexmap = "2.0.0"
crc = "3.0.0"
snap = "1.0.5"
flate2 = "1.0.20"
zstd = "0.13"
lz4 = "1.24"
paste = "1.0.7"
crc32c = "0.6.4"
anyhow = "1.0.80"

[dev-dependencies]
testcontainers = { version = "0.20.1", features = ["blocking", "watchdog"] }
