[package]
name = "franz_derive"
version = "0.1.0"
authors = ["Diggory Blake <diggsey@googlemail.com>"]
edition = "2018"

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.14", features = ["default", "extra-traits"] }
quote = "1.0.2"
proc-macro2 = "1.0.8"
