[package]
name = "franz_protocol"
version = "0.1.0"
authors = ["Diggory Blake <diggsey@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.4"
uuid = "0.8.1"
log = "0.4.8"
indexmap = "1.3.2"
