[package]
name = "protocol_base"
version = "0.1.0"
authors = ["Diggory Blake <diggsey@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.1"
uuid = "0.8.2"
log = "0.4.14"
indexmap = "1.7.0"
string = { version = "0.3.0", git = "https://github.com/0x1991babe/string.git" }
