[package]
name = "protocol_codegen"
version = "0.1.0"
authors = ["Diggory Blake <diggsey@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.9"
failure = "0.1.6"
Inflector = { version = "0.11.4", default-features = false }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
serde_plain = "0.3.0"
parse-display = "0.1.1"
json_comments = "0.2.0"
assert-json-diff = "1.0.1"
